# SeaBattle

./: .gitignore  CMakeLists.txt  Makefile  README  Readme
Battle/: .cproject  .project  application.xml  signature.xml
Battle/Res/480x800/: IDF_FORM1.xml  Thumbs.db
Battle/Res/ScreenSize-Normal/: IDF_FORM1.xml
Battle/inc/: Battle.h  BattleFieldControl.h  Form1.h
Battle/src/: Battle.cpp  BattleEntry.cpp  BattleFieldControl.cpp  Form1.cpp
android/: Android.mk  AndroidManifest.xml
android/jni/: Android.mk  Application.mk  MainApplication.cpp  MainApplication.h  Native.cpp
android/res/layout/: main.xml  start_screen.xml
android/res/values/: strings.xml
android/src/com/seabattle/: AIBattleField.java  BattleField.java  HumanBattleField.java  MainActivity.java  Native.java
documentation/: doxygenConfig.in
include/: AIPlayer.h  BattleField.h  HumanPlayer.h  Player.h  Ship.h
src/: AIPlayer.cpp  AIPlayer.h  BattleField.cpp  BattleField.h  HumanPlayer.cpp  HumanPlayer.h  Player.cpp  Player.h  Ship.cpp  Ship.h  main.cpp
